--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ Jinja2==3.1.2
 pdflatex==0.1.3
 python-dotenv==1.0.0
 requests==2.31.0
+# For SSH operations with Git
+gitpython==3.1.31
 # For image processing
 numpy==1.24.3
 # For security
